--- a/talk/talk.qmd
+++ b/talk/talk.qmd
@@ -1,18 +1,18 @@
 ---
 title: "Talk template" 
-author: Russ Poldrack
+author: Chris Markiewicz
 institute: Stanford University
 title-slide-attributes:
     data-background-image: ./images/stanford_background.jpg
     data-background-opacity: "0.5"
 format:
   revealjs: 
-    footer: "https://poldrack.github.io/talks-template/"
+    footer: "https://effigies.github.io/talks-template/"
     slide-number: true
     chalkboard: 
       buttons: false
     preview-links: auto
-    theme: [default, rp-theme.scss]
+    theme: [default, cjm-theme.scss]
     height: 1080
     width: 1920
 ---
